jboot v3.9.14:
新增：为 undertow 新增默认的 content-type，解决 mp4 等视频不能播放的问题
新增：ValidErrorRender，方便用户自定义 "数据验证" 错误的渲染器
修复：当 Interceptor 被 cglib 代理时，无法正确输出其日志的问题



jboot v3.9.13:
新增：新增配置 "jboot.app.listener"，用于配置可以执行的 appListener
新增：新增配置 "jboot.json.skipModelAttrs" 和 "jboot.json.skipBeanGetters" 配置
优化：JbootGatewayHandler 默认添加在系统里，方便进行动态路由
优化：JbootGatewayHealthChecker 的代码
优化：升级 JFinal 等依赖到最新版本
优化：对 ClickHouse 高级版本 驱动 进行适配
修复：代码生成器在某些情况下输出的 html 不是 utf8 编码的问题
修复：WeightUtil 判断错误的 bug



jboot v3.9.12:
新增：devModel 可以动态配置，方便在某些场景下切换 devMode
修复：在某些极端场景下，PathKit.getWebRootPath() 可能出错的问题
修复：当查询的 Page 为 null 时，分页的总页数数据错误的问题



jboot v3.9.11:
新增：注解 @ActionKey() 支持 ./ 相对路径的配置
新增：门户网关拦截器新增对 Header 的配置
新增：JbootActionReporter 的开关配置，而不是由 devMode 决定
优化：门户网关的健康检查代码抽离为独立的类 JbootGatewayHealthChecker
优化：门户网关 NoneHealthUrlErrorRender 重构为 GatewayErrorRender，支持更多的错误渲染
优化：门户网关可以通过拦截器自定义前端渲染功能
优化：简化 RPC 的默认配置
优化：优化 JWT 的代码逻辑
优化：升级 JFinal、Seata 等到最新版本
优化：优化 ConfigUtil 的参数解析方法
优化：优化 FastJsonSerializer 的逻辑代码
文档：优化序列化的相关文档



jboot v3.9.10:
新增：Dubbo Method 的 oninvoke/onreturn/onthrow 配置的支持
新增：不同的 @RPCIject 持有不同 RPC 对象的支持
优化：当 provider 未启动，但是开启 check 后无法注入，但提示信息不明确的问题
优化：升级 jackson、dubbo 等到最新版本
修复：ConfigUtil 在读取 Object 时可能出错的问题
修复：RPCUtil 在配置 default 有时可能无效的问题
修复：Dubbo 版本升级后，不再支持对 consumer 的 protocol 配置
修复：Dubbo 升级到 2.7.10 后，若不配置直连协议，启动出错的问题



jboot v3.9.9:
新增：@TxEnable() 注解的支持，方便在 Service 进行事务处理
优化：优化 JsonBodyParseInterceptor.java 代码
优化：升级 JFinal、FastJson 等到最新版本
修复：泛型的 Controller 无法覆盖子类 Action 的问题 [#I3FG0B](https://gitee.com/JbootProjects/jboot/issues/I3FG0B)
修复：使用 @JsonBody 注解，同时使用 泛型 的 Controller 在 openJdk 下可能出错的问题
修复：paginateByColumns 传入复杂的 Order By 可能产生错误的问题
文档：修复 Dubbo 文档 url 路径错误的问题



jboot v3.9.8:
新增：@GetMapping() 和 @PostMapping() 的支持
新增：@JsonBody() 注解支持 LocalDate 和 LocalDateTime
新增：@JsonBody() 注解支持在 Class 定义泛型的功能
优化：控制输出的 Action 时间执行时间，包含了模板引擎的渲染时间。
优化：Jwt 拦截器构建器的代码
优化：门户网关的 Http 代理代码
优化：升级 Nacos 等依赖到最新版本



jboot v3.9.7:
新增：@Lazy 懒加载注入的功能