@@ -6,7 +6,7 @@
 
     <groupId>io.jboot</groupId>
     <artifactId>jboot</artifactId>
-    <version>4.0.0-SNAPSHOT</version>
+    <version>3.9.15-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>jboot</name>
